# Raspberry-Pi-Pico-PIO

./: Data Request using PIO Side Set  EP 14 AWG Files.txt  EP 18 MicroPython Program files  Ep 15 Fast AWG files.txt  Ep 16 Smooth AWG files.txt  Ep 17 MIDI program files.txt  Ep 19 Program files.txt  Episode 11 programs  Episode 12 Files.txt  Episode 13 Arduino IDE files.txt  PIO Ep 20 files.txt  PIO Episode 10 Files .txt  PIO Episode 7 Examples.txt  PIO Episode 8 - DMA.txt  PIO Jump Examples.txt  PIO Parallel Port  README.md  dma_step_fade.c  handshaking with Dual PIOs
Ep_21_Scanned_KB/: PIO21_kcScan.py  Readme
Ep_22_C_Scanned_KB/: print_kb.C  print_kb.pio  readme
Ep_22_C_Scanned_KB/Demo 1 - Conversion to C/: CMakeLists.txt  readme
Ep_22_C_Scanned_KB/Demo 2 - Adding Interrupts/: CMakeLists.txt  main demo 19A IRQ.c  print_kb_irq.C  print_kb_irq.pio
Ep_22_C_Scanned_KB/Demo 3 - Making it faster/: CMakeLists.txt  print_kb_fast_irq.C  print_kb_fast_irq.pio  readme
Ep_22_C_Scanned_KB/Demo 4 - Key decoding/: CMakeLists.txt  kb_scan_decode.C  kb_scan_decode.pio
